[package]
name = "poker-equity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
regex = "1.11.1"
eframe = { version = "0.31.1", features = ["default"] }
egui_extras = { version = "0.31.1", features = ["default", "image"] }
env_logger = "0.11.7"
