[workspace]
members = [
    "poker-core",
    "poker-gui",
    "poker-app",
]
resolver = "2"

[workspace.dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.12.0"
eframe = { version = "0.31.1", features = ["default"] }
egui_extras = { version = "0.31.1", features = ["default", "image"] }
env_logger = "0.11.7"
