[package]
name = "gto-wizard-crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
poker-core = { path = "../poker-core" }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["full"] }
url = "2.5.4"
reqwest = { version = "0.12.18", features = ["gzip", "brotli", "deflate", "json"] }
