[package]
name = "poker-app"
version = "0.1.0"
edition = "2021"

[dependencies]
poker-core = { path = "../poker-core" }
poker-gui = { path = "../poker-gui" }
eframe = { workspace = true }
egui_extras = { workspace = true }
env_logger = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
